[package]
name = "aris"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5"
hmac = "0.12"
sha2 = "0.10"
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
serde_repr = "0.1"
async-trait = "0.1"
flate2 = "1.0"
hex = "0.4"
casus = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
